--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" style="color:white; font-size: 30px;" href="#">كــــشك</a>
+                <a class="navbar-brand" style="color:white; font-size: 30px;" href="#">fffffffffff</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse my-navbar-collapse" id="bs-example-navbar-collapse-1">
